--- a/Views/Login/Cadastrar.cshtml
+++ b/Views/Login/Cadastrar.cshtml
@@ -2,14 +2,15 @@
 @{
     ViewBag.Title = "Cadastrar";
 }
+<link href="~/Styles/reset.css" rel="stylesheet" />
 
-<h2>Cadastrar</h2>
 
 @using (Html.BeginForm("CadastrarUsuario", "Login", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal container center">
+    <h2 style="margin: 1rem;">Cadastrar</h2>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -60,7 +61,7 @@
     <div class="form-group">
         <br />
         <div class="col-md-10">
-            @Html.PasswordFor(model => model.dsSenha, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite sua senha" } })
+            @Html.EditorFor(model => model.dsSenha, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite sua senha", type = "password" } })
             @Html.ValidationMessageFor(model => model.dsSenha, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -68,7 +69,7 @@
     <div class="form-group">
         <br />
         <div class="col-md-10">
-            @Html.PasswordFor(model => model.ConfirmaSenha, new { htmlAttributes = new { @class = "form-control input", placeholder = "Confirme sua senha" } })
+            @Html.EditorFor(model => model.ConfirmaSenha, new { htmlAttributes = new { @class = "form-control input", placeholder = "Confirme sua senha", type = "password" } })
             @Html.ValidationMessageFor(model => model.ConfirmaSenha, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -99,7 +100,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Finalizar Cadastro" class="color btn btn-default azul" />
+            <input type="submit" value="Finalizar Cadastro" class="btn-dark-blue " style="margin: 1rem;" />
         </div>
     </div>
 </div>
@@ -107,3 +108,4 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
