--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,8 +8,9 @@
     <title>@ViewBag.Title - Além das Fronteiras</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @model AspViagens.Models.login
     @Scripts.Render("bootstrap.bundle.min.js/ bootstrap.bundle.js")
+    <script src="https://kit.fontawesome.com/f744b840f7.js" crossorigin="anonymous"></script>
+    <link href="~/Styles/navbar.css" rel="stylesheet" />
     <link href="~/Styles/reset.css" rel="stylesheet" />
 </head>
 <body>
@@ -25,177 +26,148 @@
                     @if (Session["tipoLogado1"] == null && Session["tipoLogado2"] == null)
                     {
 
-                        <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Cadastrar", "Cadastrar", "Login", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Todos os Planos", "SaibaMais", "Home", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Carrinho", "Carrinho", "Home", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <button type="button" class="" data-bs-toggle="modal" data-bs-target="#exampleModal">Login</button>
+                        <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li class="nav-item">@Html.ActionLink("Todos os Planos", "SaibaMais", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li class="nav-item">@Html.ActionLink("Cadastrar", "Cadastrar", "Login", new { area = "" }, new { @class = "nav-link" })</li>
+                        @*<li class="nav-item">@Html.ActionLink("Carrinho", "Carrinho", "Home", new { area = "" }, new { @class = "nav-link" })</li>*@
+
                     }
 
                     @if (Session["tipoLogado1"] != null)
                     {
-                        <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Listar Pacotes", "SaibaMais", "Home", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Carrinho", "Carrinho", "Home", new { area = "" }, new { @class = "nav-link laranja" })</li>
-
+                        <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li class="nav-item">@Html.ActionLink("Todos os Planos", "SaibaMais", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li class="nav-item">@Html.ActionLink("Carrinho", "Carrinho", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     }
 
                     @if (Session["tipoLogado2"] != null)
                     {
-                        <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Cadastrar", "Cadastrar", "Login", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Excluir", "Excluir", "Login", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Listar Pacotes", "SaibaMais", "Home", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Cadastar Pacotes", "CadPacote", "Pacote", new { area = "" }, new { @class = "nav-link laranja" })</li>
-                        <li class="nav-item">@Html.ActionLink("Todos as Compras", "ConsTdDetalhes", "Home", new { area = "" }, new { @class = "nav-link laranja" })</li>
+                        <li class="nav-item">@Html.ActionLink("Dashboard", "Dashboard", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     }
 
-                    @if (Session["tipoLogado1"] != null)
-                    {
-                      @Session["dsLogin"]
-                      @Html.ActionLink("Sair", "Logout", "Login")
-                      @Html.ActionLink("Meus Pedidos", "Detalhes", "Home")
-                          
+                </ul>
+
+                <div class="icons-nav">
+
+                    @if (Session["tipoLogado1"] == null && Session["tipoLogado2"] == null)
+                    {<i class="fa-solid fa-basket-shopping fa-xl login"></i>
+                        @Html.ActionLink(" ", "Login", "Home", new { @class ="fa-solid fa-user fa-xl login" })
                     }
-                    @if (Session["tipoLogado2"] != null)
+                    else
                     {
-                         @Session["dsLogin"]
-                         @Html.ActionLink("Sair", "Logout", "Login")
-                     }
-                    </ul>
+                        if (Session["tipoLogado1"] != null)
+                        {
+                            @Session["dsLogin"]
+                            @Html.ActionLink(" ", "Logout", "Home", new { @class = "fa-solid fa-right-to-bracket fa-xl login" })
+                            @Html.ActionLink(" ", "Detalhes", "Home", new { @class = "fa-solid fa-basket-shopping fa-xl login" })
 
-                <div class="modal fade" id="exampleModal" tabindex="-1" <a href="#">content</a>ria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                Acessar conta
-                            </div>
-                            <div class="modal-body">
-                                @using (Html.BeginForm("VerificaUsuario", "Login", FormMethod.Post))
-                                {@Html.AntiForgeryToken()
+                       }
 
-                                <div class="form-horizontal">
-                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                    <div class="form-group">
-                                        <div class="col-md-10">
-                                            @Html.EditorFor(model => model.dsLogin, new { htmlAttributes = new { @class = "form-control input", placeholder = "Login" } })
-                                            @Html.ValidationMessageFor(model => model.dsLogin, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
+                        if (Session["tipoLogado2"] != null)
+                                {
+                                    @Session["dsLogin"]
+                            @Html.ActionLink(" ", "Logout", "Home", new { @class = "fa-solid fa-right-to-bracket fa-xl login" })
+                        }
 
-                                    <div class="form-group">
-                                        <br />
-                                        <div class="col-md-10">
-                                            @Html.PasswordFor(model => model.dsSenha, new { htmlAttributes = new { @class = "form-control input", placeholder = "Senha" } })
-                                            @Html.ValidationMessageFor(model => model.dsSenha, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <div class="form-group">
-                                            @Html.ActionLink("Ainda não sou cadastrado", "Cadastrar", "Login")
-                                                <input type="submit" value="Entrar" class="btn-dark-blue" />
-                                        </div>
-                                        </div>
-                                    </div>
-                                    }
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                            }
+
+
 
                 </div>
+
             </div>
-
-        </nav>
-        <div class=" " style="overflow: hidden">
-            @RenderBody()
-
         </div>
-        <!-- Footer -->
-        <footer class="text-center text-lg-start text-light"
-                style="background-color: #000003; padding: 2rem 0 0 0">
 
-            <!-- Section: Links  -->
-            <section class="">
-                <div class="container text-center text-md-start mt-5">
-                    <!-- Grid row -->
-                    <div class="row mt-3">
-                        <!-- Grid column -->
-                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                            <!-- Content -->
-                            <h6 class="text-uppercase fw-bold">Além das Fronteiras</h6>
-                            <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                                style="width: 60px; background-color: #48D597; height: 2px" />
-                            <p>
-                                Os melhores pacotes de intercambio do mercado voce só encontra aqui.
-                            </p>
-                        </div>
-                        <!-- Grid column -->
-                        <!-- Grid column -->
-                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                            <!-- Links -->
-                            <h6 class="text-uppercase fw-bold">Pacotes</h6>
-                            <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                                style="width: 60px; background-color: #48D597; height: 2px" />
-                            <p>
-                                <a href="#!" class="text-light">Canadá</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-light">Londres</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-light">Orlando</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-light">México</a>
-                            </p>
-                        </div>
-                        <!-- Grid column -->
-                        <!-- Grid column -->
-                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                            <!-- Links -->
+    </nav>
+    <div class=" " style="overflow: hidden">
+        @RenderBody()
 
-                            <p>
-                                <a href="#!" class="text-light">Sua conta</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-light">Perguntas frequentes</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-light">Sobre nós</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-light">Ajuda</a>
-                            </p>
-                        </div>
-                        <!-- Grid column -->
-                        <!-- Grid column -->
-                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                            <!-- Links -->
-                            <h6 class="text-uppercase fw-bold">Contato</h6>
-                            <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                                style="width: 60px; background-color: #48D597; height: 2px" />
-                            <p><i class="fas fa-home mr-3" style="color: #48D597"></i> São Paulo, SP 10012, BR</p>
-                            <p><i class="fas fa-envelope mr-3" style="color: #48D597"></i> alemdasfronteiras@contato.com</p>
-                            <p><i class="fas fa-phone mr-3" style="color: #48D597"></i> + 01 234 567 88</p>
-                            <p><i class="fas fa-print mr-3" style="color: #48D597"></i> + 01 234 567 89</p>
-                        </div>
-                        <!-- Grid column -->
+    </div>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-light"
+            style="background-color: #000003; padding: 2rem 0 0 0">
+
+        <!-- Section: Links  -->
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+                <!-- Grid row -->
+                <div class="row mt-3">
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                        <!-- Content -->
+                        <h6 class="text-uppercase fw-bold">Além das Fronteiras</h6>
+                        <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                            style="width: 60px; background-color: #48D597; height: 2px" />
+                        <p>
+                            Os melhores pacotes de intercambio do mercado voce só encontra aqui.
+                        </p>
                     </div>
-                    <!-- Grid row -->
+                    <!-- Grid column -->
+                    <!-- Grid column -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold">Pacotes</h6>
+                        <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                            style="width: 60px; background-color: #48D597; height: 2px" />
+                        <p>
+                            <a href="#!" class="text-light">Canadá</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-light">Londres</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-light">Orlando</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-light">México</a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+
+                        <p>
+                            <a href="#!" class="text-light">Sua conta</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-light">Perguntas frequentes</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-light">Sobre nós</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-light">Ajuda</a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold">Contato</h6>
+                        <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                            style="width: 60px; background-color: #48D597; height: 2px" />
+                        <p><i class="fas fa-home mr-3" style="color: #48D597"></i> São Paulo, SP 10012, BR</p>
+                        <p><i class="fas fa-envelope mr-3" style="color: #48D597"></i> alemdasfronteiras@contato.com</p>
+                        <p><i class="fas fa-phone mr-3" style="color: #48D597"></i> + 01 234 567 88</p>
+                        <p><i class="fas fa-print mr-3" style="color: #48D597"></i> + 01 234 567 89</p>
+                    </div>
+                    <!-- Grid column -->
                 </div>
-            </section>
-            <!-- Section: Links  -->
-            <!-- Copyright -->
-            <div class="text-center p-3"
+                <!-- Grid row -->
+            </div>
+        </section>
+        <!-- Section: Links  -->
+        <!-- Copyright -->
+        <div class="text-center p-3"
                                         <p>&copy; @DateTime.Now.Year - Além das Fronteiras</p>
                         </div>
-            <!-- Copyright -->
-        </footer>
-        <!-- Footer -->
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        @RenderSection("scripts", required: false)
-    </body>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
+</body>
 </html>
